2009-02-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Add function:
	  Float_t BoundingBoxHalfDiagonal();

2009-01-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Add members:
	  Float_t mMinEdgeLen, mMaxEdgeLen;
	and calculate them in CalculateBoundingBox().

	Add functions:
	  Float_t SqrLen(const Float_t a[3], const Float_t b[3]);
	  void    SqrMinMaxEdgeLen(Int_t ti, Float_t& min, Float_t& max);

2008-12-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Add functions AddVertices(Int_t nv) and AddTriangles(Int_t
	nt). They allow the tvor to be extended with new vertices and
	triangles.

	Add functions:
	  Float_t CalculateTriangleNormal(Int_t ti, Float_t normal[3])
	  Float_t CalculateTriangleNormalAndCog(Int_t ti, Float_t normal[3], Float_t cog[3]);
	that simplify some calculations.

2008-11-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* GForge/Makefile:
	* Makefile:
	Remove explicit link against -ljpeg -ltiff -lmng -- this is now
	done during linking of libIL and libILU in gled-builder.

2008-10-04  Matevz Tadel  <matevz.tadel@ijs.si>

	* ACTC/tc.cxx:
	Fix compilation warnings.
	Consolidate debug output commands.

	* GForge/Makefile:
	Explicitly link agains image libs that are sometimes not linked
	with libIL.

2008-09-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* Makefile:
	Include '-ljpeg -ltiff -lmng' to BASE_LD_LIBS - the latest DevIL
	seems even more screwed up than before.
	Add a comment explaining this.

2008-09-25  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/WSSeed.cxx:
	Data-member m_anim_tick was only increased when running in
	auto-anim mode (not from outside time-source).
	Thanks valgrind.

2008-09-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Mover.cxx:
	* Glasses/Mover.h:
	* Glasses/RndSMorphCreator.cxx:
	* Glasses/RndSMorphCreator.h:
	* Glasses/Sleeper.cxx:
	* Glasses/Sleeper.h:
	* Glasses/TimeMaker.cxx: